syntax = "proto3";

package sec06;

import "google/protobuf/empty.proto";

option java_package="org.example.models.sec06";
option java_multiple_files=true;

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountResponse {
  repeated AccountBalance account_balance = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message WithdrawnAmount {
  int32 amount = 1;
}

message DepositAmount {
  int32 amount = 1;
}

message DepositRequest {
  oneof request {
    int32 account_number = 1;
    DepositAmount deposit_amount = 2;
  }
}

message TransferRequest {
  int32 from_account = 1;
  int32 to_Account = 2;
  int32 amount = 3;
}

enum TransferStatus {
  REJECTED = 0;
  COMPLETED = 1;
}

message TransferResponse {
  TransferStatus status = 1;
  AccountBalance from_account = 2;
  AccountBalance to_Account = 3;
}

service BankService {
  //Unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  //Unary
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountResponse);

  //server streaming
  rpc Withdraw(WithdrawRequest) returns (stream WithdrawnAmount);

  //client streaming
  rpc Deposit(stream DepositRequest) returns (AccountBalance);
}

service TransferService {
  //bidirectional stream
  rpc Transfer(stream TransferRequest) returns (stream TransferResponse);
}